Support eip-7702 SetCodeTx type
